2008-02-12  Geoff Norton  <gnorton@novell.com>

	* MonoDevelop.Core.Gui/SyncContext.cs: Create from the interface is marked
	as virtual.  Implement the proper override.

2008-02-12  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Core.Gui.Dialogs/TreeViewOptions.cs: Make TreeViewOptions
	  implement IDisposable.

2008-02-01  Michael Hutchinson  <mhutchinson@novell.com> 

	* Makefile.am:
	* icons/element-literal-16.png:
	* MonoDevelop.Core.Gui.mdp:
	* MonoDevelop.Core.Gui.addin.xml: Updated icon.
	
	* icons/Icons.16x16.Literal:
	* icons/Icons.16x16.Struct: Removed old icons.

2008-01-29  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Gui.mdp, Makefile.am, icons/build-solution-16.png,
	  icons/build-solution-22.png, icons/build-project-16.png,
	  icons/build-project-22.png, icons/visibility-internal-16.png,
	  MonoDevelop.Core.Gui.addin.xml: Updated icons.

2008-01-29  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Gui.mdp, Makefile.am, icons/build-solution-16.png,
	  icons/Icons.16x16.GotoNextbookmark,
	  icons/Icons.22x22.ClearAllBookmarks.png,
	  icons/Icons.16x16.InternalDelegate, icons/visibility-private-16.png,
	  icons/Icons.16x16.Delegate, icons/Icons.16x16.ProtectedEnum,
	  icons/Icons.16x16.ProtectedClass, icons/element-method-16.png,
	  icons/Icons.16x16.Field, icons/element-property-16.png,
	  icons/Icons.16x16.PrivateInterface, icons/element-interface-16.png,
	  icons/build-project-16.png, icons/Icons.16x16.Method,
	  icons/Icons.16x16.InternalField, icons/file-interface-32.png,
	  icons/Icons.16x16.ProtectedDelegate, icons/pad-task-list-16.png,
	  icons/visibility-protected-16.png, icons/Icons.16x16.ProtectedEvent,
	  icons/element-namespace-16.png, icons/Icons.16x16.ProtectedStruct,
	  icons/Icons.16x16.PrivateEnum, icons/Icons.16x16.TaskListIcon,
	  icons/Icons.16x16.ProtectedInterface, icons/Icons.16x16.PrivateMethod,
	  icons/Icons.16x16.PrivateProperty, icons/Icons.16x16.InternalStruct,